--- a/Hangman/Let’s play a game/task-info.yaml
+++ b/Hangman/Let’s play a game/task-info.yaml
@@ -101,5 +101,8 @@ files:
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/69/stages/373/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Mon, 23 Jan 2023 08:33:34 UTC"
 record: -1
