--- a/Hangman/Make your choice/task-info.yaml
+++ b/Hangman/Make your choice/task-info.yaml
@@ -130,5 +130,8 @@ files:
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/69/stages/374/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Mon, 23 Jan 2023 09:38:13 UTC"
 record: -1
