--- a/Hangman/Help is on the way/task-info.yaml
+++ b/Hangman/Help is on the way/task-info.yaml
@@ -139,9 +139,26 @@ files:
     if __name__ == '__main__':
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/69/stages/375/implement#comment
-status: Solved
+feedback_link: https://hyperskill.org/learn/step/6085#comment
+status: Failed
 feedback:
-  message: Congratulations!
-  time: "Mon, 23 Jan 2023 13:21:56 UTC"
-record: -1
+  message: |-
+    Wrong answer in test #1
+
+    It looks like your output is wrong.
+    Input: kotlin
+    Correct output: You lost!
+
+    Please find below the output of your program during this failed test.
+    Note that the '>' character indicates the beginning of the input line.
+
+    ---
+
+    H A N G M A N
+    -----
+    Input a letter:> kotlin
+    That letter doesn't appear in the word.
+    -----
+    Input a letter:
+  time: "Mon, 23 Jan 2023 15:09:50 UTC"
+record: 4
