--- a/Hangman/The value of life/task-info.yaml
+++ b/Hangman/The value of life/task-info.yaml
@@ -678,5 +678,8 @@ files:
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/6087#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 24 Jan 2023 03:52:48 UTC"
 record: -1
