--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/225053/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Mon, 23 Jan 2023 13:41:43 UTC"
+update_date: "Mon, 23 Jan 2023 18:53:43 UTC"
 stages:
 - id: 372
   step: 6082
@@ -22,7 +22,7 @@ stages:
   is_completed: true
 - id: 377
   step: 6087
-  is_completed: false
+  is_completed: true
 - id: 378
   step: 6088
   is_completed: false
