--- a/Hangman/Error/task-info.yaml
+++ b/Hangman/Error/task-info.yaml
@@ -756,5 +756,8 @@ files:
         HangmanTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/6088#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 24 Jan 2023 07:01:12 UTC"
 record: -1
